--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
      <title>TYPHOID BEACH</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="/Users/alanwhite/Google Drive/Code Projects/ZED/Projects_Practice/Typhoid Beach/CSS/normalize.css">
+    <link rel="stylesheet" href="/Users/alanwhite/Google Drive/Code Projects/ZED/TYPHOID BEACH/CSS/normalize.css">
 
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/Users/alanwhite/Google Drive/Code Projects/ZED/Projects_Practice/Typhoid Beach/CSS/main.css">
+    <link rel="stylesheet" href="/Users/alanwhite/Google Drive/Code Projects/ZED/TYPHOID BEACH/CSS/main.css">
 
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
@@ -420,11 +420,8 @@
                   SCRIPTS
 *********************************************************************-->
 
-        <script src="/Users/alanwhite/Google Drive/Code Projects/ZED/Projects_Practice/Typhoid Beach/JS/jquery-3.1.0.min.js"></script>
+        <script src="/Users/alanwhite/Google Drive/Code Projects/ZED/TYPHOID BEACH/JS/jquery-3.1.0.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <!-- <script src="JS/playlist.js"></script>
-        <script src="JS/song.js"></script>
-        <script src="JS/app.js"></script> -->
         <script src="JS/main.js"></script>
 
 </body>
