--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
      <title>TYPHOID BEACH</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="/Users/alanwhite/Google Drive/Code Projects/ZED/TYPHOID BEACH/CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
 
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/Users/alanwhite/Google Drive/Code Projects/ZED/TYPHOID BEACH/CSS/main.css">
+    <link rel="stylesheet" href="CSS/main.css">
 
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
@@ -59,28 +59,28 @@
       <table class="table table-hover">
         <tbody>
           <tr>
+            <td class="date">3/16/17</td>
             <td class="city">Louisville</td>
             <td class="state">KY</td>
             <td class="venue">Headliners Music Hall</td>
-            <td class="date">3/16/17</td>
           </tr>
           <tr>
+            <td class="date">3/18/17</td>
             <td class="city">New Albany</td>
             <td class="state">IN</td>
             <td class="venue">New Albany Ampitheater</td>
-            <td class="date">3/18/17</td>
           </tr>
           <tr>
+            <td class="date">4/07/17</td>
             <td class="city">New Albany</td>
             <td class="state">IN</td>
             <td class="venue">New Albanian Brewery</td>
-            <td class="date">4/07/17</td>
           </tr>
           <tr>
+            <td class="date">4/18/17</td>
             <td class="city">Louisville</td>
             <td class="state">KY</td>
             <td class="venue">Z Bar</td>
-            <td class="date">4/18/17</td>
           </tr>
         </tbody>
       </table>
@@ -420,7 +420,7 @@
                   SCRIPTS
 *********************************************************************-->
 
-        <script src="/Users/alanwhite/Google Drive/Code Projects/ZED/TYPHOID BEACH/JS/jquery-3.1.0.min.js"></script>
+        <script src="JS/jquery-3.1.0.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="JS/main.js"></script>
 
