added missing link for form validation and styled validation conditions

--- a/index.html
+++ b/index.html
@@ -421,8 +421,16 @@
 *********************************************************************-->
 
         <script src="JS/jquery-3.1.0.min.js"></script>
+
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js
+        "></script>
+        
         <script src="JS/main.js"></script>
+
+
+
 
 </body>
 </html>
