--- a/index.html
+++ b/index.html
@@ -316,6 +316,8 @@
     <!-- Success message -->
     <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
 
+    <div class="alert alert-danger" role="alert" id="error_message">Error <i class="glyphicon glyphicon-thumbs-down"></i> SERVER UNAVAILABLE. Please try again later.</div>
+
     <!-- Button -->
     <div class="form-group">
       <label class="col-md-4 control-label"></label>
