--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 </head>
 
 <body>
+  <header>
+    <h1>Typhoid Beach</h1>
+    <h4>"Break break break on thy cold grey slate oh disease"</h4>
+  </header>
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -37,7 +41,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="index.html"><i class="fa fa-venus-mars" aria-hidden="true"></i> Home<span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
           <li><a href="#dates">Dates</a></li>
           <li><a href="#merch">Merch</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -53,34 +57,31 @@
                   DATES
 *********************************************************************-->
 
-<div id="dates" class="container-fluid">
+<div id="dates" class="container">
   <div class="row row-dates">
     <div class="table-responsive">
       <table class="table table-hover">
         <tbody>
           <tr>
-            <td class="date">3/16/17</td>
+            <td class="date">5/20/17</td>
             <td class="city">Louisville</td>
             <td class="state">KY</td>
-            <td class="venue">Headliners Music Hall</td>
+            <td class="venue"><a href="http://zanzabarlouisville.com/">Z Bar</a></td>
+            <td class="directions"><a href="https://www.google.com/maps/place/Zanzabar/@38.21747,-85.7481777,17z/data=!3m1!4b1!4m5!3m4!1s0x88690d154ac6b06b:0x50c653924922ce7!8m2!3d38.21747!4d-85.745989">Directions</a></td>
           </tr>
           <tr>
-            <td class="date">3/18/17</td>
-            <td class="city">New Albany</td>
-            <td class="state">IN</td>
-            <td class="venue">New Albany Ampitheater</td>
-          </tr>
-          <tr>
-            <td class="date">4/07/17</td>
-            <td class="city">New Albany</td>
-            <td class="state">IN</td>
-            <td class="venue">New Albanian Brewery</td>
-          </tr>
-          <tr>
-            <td class="date">4/18/17</td>
+            <td class="date">7/08/17</td>
             <td class="city">Louisville</td>
             <td class="state">KY</td>
-            <td class="venue">Z Bar</td>
+            <td class="venue"><a href="https://www.poorcastle.com/">Poorcastle</a></td>
+            <td class="directions"><a href="https://www.google.com/maps/place/Apocalypse+Brew+Works,+LLP/@38.2567034,-85.7227215,17z/data=!3m1!4b1!4m5!3m4!1s0x88697323de90839b:0x29cfde6ae8a3f27!8m2!3d38.2567034!4d-85.7205328">Directions</a></td>
+          </tr>
+          <tr>
+            <td class="date">8/5/17</td>
+            <td class="city">Sellersburg</td>
+            <td class="state">IN</td>
+            <td class="venue"><a href="https://www.facebook.com/PowwowMusicBash/">Powwow Music Bash</a></td>
+            <td class="directions"><a href="https://www.google.com/maps/place/38%C2%B024'43.0%22N+85%C2%B047'03.2%22W/@38.4119417,-85.7861639,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d38.411938!4d-85.78422">Directions</a></td>
           </tr>
         </tbody>
       </table>
@@ -93,45 +94,99 @@
 *********************************************************************-->
 <div id="merch" class="container">
   <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
       <div id="merch-carousel" class="carousel slide" data-ride="carousel">
                   <!--Indicators Dot Nav-->
       <ol class="carousel-indicators">
         <li data-target="#merch-carousel" data-slide-to="0" class="active"></li>
         <li data-target="#merch-carousel" data-slide-to="1"></li>
         <li data-target="#merch-carousel" data-slide-to="2"></li>
+        <li data-target="#merch-carousel" data-slide-to="3"></li>
+        <li data-target="#merch-carousel" data-slide-to="4"></li>
+        <li data-target="#merch-carousel" data-slide-to="5"></li>
       </ol>
 
                   <!--Wrapper for slides-->
         <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img class="d-block img-fluid" src="Images/Shirt1_test.jpg" alt="Shirt 1">
+          <div class="item active hovereffect">
+                <img class="d-block img-responsive" src="Images/Savage Cassette.jpg" alt="Shirt 1">
+              <div class="overlay">
+                <h2>Savage Exclusive Pink Cassette</h2>
+        				<p>
+        					<a class="info" href="http://store.likeyoungrecords.com/product/typhoid-beach-savage-cs">Shop at Like Young Records</a>
+        				</p>
+              </div>
               <div class="carousel-caption d-none d-md-block">
-                <h3>Example Shirt 1</h3>
-                <p>$9.99</p>
+                <p>$5.00</p>
               </div>
           </div>
-          <div class="item">
-            <img class="d-block img-fluid" src="Images/Shirt2_test.jpeg" alt="Shirt 2">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Example Shirt 2</h3>
-              <p>$9.99</p>
-            </div>
+          <div class="item hovereffect">
+            <img class="d-block img-responsive" src="Images/Typhoid Sun P:Y:B.jpeg" alt="Higher Ground Black T-shirt">
+          <div class="overlay">
+            <h2>Typhoid Beach Higher Ground PY/BK</h2>
+            <p>
+              <a class="info" href="#">Shop at Bandcamp</a>
+            </p>
           </div>
-          <div class="item">
-            <img class="d-block img-fluid" src="Images/Shirt3_test.jpg" alt="Shirt 3">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Example Shirt 3</h3>
-              <p>$9.99</p>
-            </div>
+          <div class="carousel-caption d-none d-md-block">
+            <p>$10.00</p>
+          </div>
+          </div>
+          <div class="item hovereffect">
+            <img class="d-block img-responsive" src="Images/Typhoid Sun P:Y:W.jpeg" alt="Higher Ground White T-shirt">
+          <div class="overlay">
+            <h2>Typhoid Beach Higher Ground PY/WH</h2>
+            <p>
+              <a class="info" href="#">Coming Soon</a>
+            </p>
+          </div>
+          <div class="carousel-caption d-none d-md-block">
+            <p>$10.00</p>
+          </div>
+          </div>
+          <div class="item hovereffect">
+            <img class="d-block img-responsive" src="Images/Typhoid Diner Black.jpeg" alt="Diner Black T-shirt">
+          <div class="overlay">
+            <h2>Typhoid Diner BK</h2>
+            <p>
+              <a class="info" href="#">Coming Soon</a>
+            </p>
+          </div>
+          <div class="carousel-caption d-none d-md-block">
+            <p>$10.00</p>
+          </div>
+          </div>
+          <div class="item hovereffect">
+            <img class="d-block img-responsive" src="Images/Typhoid Diner White.jpeg" alt="Diner White T-shirt">
+          <div class="overlay">
+            <h2>Typhoid Diner WH</h2>
+            <p>
+              <a class="info" href="#">Coming Soon</a>
+            </p>
+          </div>
+          <div class="carousel-caption d-none d-md-block">
+            <p>$10.00</p>
+          </div>
+          </div>
+          <div class="item hovereffect">
+            <img class="d-block img-responsive" src="Images/Typhoid Diner Pink.jpeg" alt="Diner Pink T-shirt">
+          <div class="overlay">
+            <h2>Typhoid Diner PK</h2>
+            <p>
+              <a class="info" href="#">Coming Soon</a>
+            </p>
+          </div>
+          <div class="carousel-caption d-none d-md-block">
+            <p>$10.00</p>
+          </div>
           </div>
         </div>
                   <!-- Controls for Next and Prev Buttons-->
                   <a class="left carousel-control" href="#merch-carousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="c-arrows glyphicon glyphicon-chevron-left"></span>
                   </a>
                   <a class="right carousel-control" href="#merch-carousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="c-arrows glyphicon glyphicon-chevron-right"></span>
                   </a>
       </div>
     </div>
@@ -144,7 +199,7 @@
 <div id="contact">
   <!--Empty for contact link target-->
 </div>
-<div class="container">
+<div id="formContainer" class="container">
   <form class="contact form-horizontal" action="" method="post"  id="contact_form">
     <fieldset>
 
