--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="CSS/main.css">
 
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon.ico">
+    
 
 </head>
 
