added link to Merch on Bandcamp

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="overlay">
             <h2>Typhoid Beach Higher Ground PY/BK</h2>
             <p>
-              <a class="info" href="#">Shop at Bandcamp</a>
+              <a class="info" href="https://typhoidbeach.bandcamp.com/merch/typhoid-beach-higher-ground-py-bk">Shop at Bandcamp</a>
             </p>
           </div>
           <div class="carousel-caption d-none d-md-block">
