added target_blank to merch links

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="overlay">
                 <h2>Savage Exclusive Pink Cassette</h2>
         				<p>
-        					<a class="info" href="http://store.likeyoungrecords.com/product/typhoid-beach-savage-cs">Shop at Like Young Records</a>
+        					<a class="info" href="http://store.likeyoungrecords.com/product/typhoid-beach-savage-cs" target="_blank">Shop at Like Young Records</a>
         				</p>
               </div>
               <div class="carousel-caption d-none d-md-block">
@@ -127,7 +127,7 @@
           <div class="overlay">
             <h2>Typhoid Beach Higher Ground PY/BK</h2>
             <p>
-              <a class="info" href="https://typhoidbeach.bandcamp.com/merch/typhoid-beach-higher-ground-py-bk">Shop at Bandcamp</a>
+              <a class="info" href="https://typhoidbeach.bandcamp.com/merch/typhoid-beach-higher-ground-py-bk" target="_blank">Shop at Bandcamp</a>
             </p>
           </div>
           <div class="carousel-caption d-none d-md-block">
@@ -139,7 +139,7 @@
           <div class="overlay">
             <h2>Typhoid Beach Higher Ground PY/WH</h2>
             <p>
-              <a class="info" href="#">Coming Soon</a>
+              <a class="info" href="#" target="_blank">Coming Soon</a>
             </p>
           </div>
           <div class="carousel-caption d-none d-md-block">
@@ -151,7 +151,7 @@
           <div class="overlay">
             <h2>Typhoid Diner BK</h2>
             <p>
-              <a class="info" href="#">Coming Soon</a>
+              <a class="info" href="#" target="_blank">Coming Soon</a>
             </p>
           </div>
           <div class="carousel-caption d-none d-md-block">
@@ -163,7 +163,7 @@
           <div class="overlay">
             <h2>Typhoid Diner WH</h2>
             <p>
-              <a class="info" href="#">Coming Soon</a>
+              <a class="info" href="#" target="_blank">Coming Soon</a>
             </p>
           </div>
           <div class="carousel-caption d-none d-md-block">
@@ -175,7 +175,7 @@
           <div class="overlay">
             <h2>Typhoid Diner PK</h2>
             <p>
-              <a class="info" href="#">Coming Soon</a>
+              <a class="info" href="#" target="_blank">Coming Soon</a>
             </p>
           </div>
           <div class="carousel-caption d-none d-md-block">
